# wordpress-k8s-operator

./: .dockerignore  .gitignore  .gitmodules  .jujuignore  .licenserc.yaml  .readthedocs.yaml  .trivyignore  .vale.ini  .woke.yaml  .woke.yml  .wokeignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  Makefile.docs  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  copilot-test-input.yaml  create_spread_task_file.py  dispatch  generate-src-docs.sh  index.html  kube-config  layer.yaml  metadata.yaml  notes.txt  pyproject.toml  renovate.json  requirements-binary.txt  requirements-source.txt  requirements.txt  spread.yaml  tox.ini  tox.toml  trivy.yaml  wordpress-k8s-branch.yaml  (+3 more)
.github/: .jira_sync_config.yaml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: auto_update_libs.yaml  autoremove_cves.yaml  bot_pr_approval.yaml  cache.yaml  check-removed-urls.yml  comment.yaml  comment_contributing.yaml  debug.yaml  docs.yaml  docs_rtd.yaml  execute_tutorial_notebook.yaml  integration_test.yaml  integration_test_juju3.yaml  integration_test_secrets.yaml  markdown-style-checks.yml  promote_charm.yaml  publish_charm.yaml  publish_tutorial_notebook.yaml  sphinx-python-dependency-build-checks.yml  spread.yaml  spread_automated.yaml  spread_docs.yaml  spread_docs_tutorial.yaml  test-upload-charm-docs.yaml  test.yaml  test_and_publish_charm.yaml  test_upload_charm_docs.yaml
1193/: index.html
1193/data/: behaviors.json  packages.json  (+3 more)
1196/: index.html
1197/: index.html
1200/: index.html
1201/: index.html
1202/: index.html
1203/: index.html
1204/: index.html
1205/: index.html
1206/: index.html
1207/: index.html
1208/: index.html
1209/: index.html
1215/: index.html
1217/: index.html
1218/: index.html
1219/: index.html
1220/: index.html
1221/: index.html
1222/: index.html
1223/: index.html
1224/: index.html
1226/: index.html
1228/: index.html
1229/: index.html
1231/: index.html
1232/: index.html
1233/: index.html
1234/: index.html
1235/: index.html
1236/: app.js  index.html
1237/: index.html
1239/: index.html
1240/: index.html
1243/: index.html
1252/: index.html
1254/: index.html
1259/: index.html
1277/: index.html
1278/: index.html
1279/: index.html
1281/: index.html
1291/: index.html
1299/: index.html
1323/: index.html
1343/: index.html
1350/: index.html
1354/: index.html
1357/: index.html
1364/: index.html
1367/: index.html
1368/: index.html
1382/: index.html
1388/: index.html
1390/: index.html
1403/: index.html
1433/: app.js  index.html
1435/: index.html
1439/: index.html
1445/: index.html
docs/: .custom_wordlist.txt  .gitignore  .readthedocs.yaml  Makefile  changelog.md  conf.py  index.md  redirects.txt  requirements.txt  tutorial.ipynb  tutorial.md
files/: 000-default.conf  apache2.conf  docker-php.conf
image-builder/: Makefile  fetcher.py  tox.ini
reactive/: container.py  generik8s.py  wordpress.py
src/: charm.py  charm.pyi  constants.py  cos.py  exceptions.py  leadership.py  mysql.py  state.py  types_.py  wordpress.py  wordpressInit.sh
src-docs/: charm.py.md  cos.py.md  exceptions.py.md  state.py.md  types_.py.md
tests/: __init__.py  conftest.py
wordpress_rock/: rockcraft.yaml
(+2834 files in other folders)
